--- a/src/components/rich-text-editor/rich-text-editor.css
+++ b/src/components/rich-text-editor/rich-text-editor.css
@@ -3,7 +3,26 @@
 }
 
 .demo-editor {
+}
+
+.rdw-editor-toolbar.rich-text__toolbar {
+  display: none;
+}
+
+.rdw-editor-wrapper:focus-within .rich-text__toolbar {
+  display: flex;
   border: 1px solid #f1f1f1 !important;
   padding: 5px !important;
   border-radius: 2px !important;
+}
+
+.rdw-editor-wrapper:focus-within .demo-editor {
+  border: 1px solid #f1f1f1 !important;
+  padding: 10px !important;
+  border-radius: 2px !important;
+}
+
+.rdw-editor-wrapper:hover:not(:focus-within) {
+  background-color: #edf2f6;
+  border-radius: 10px !important;
 }
